<resources>
    <string name="app_name">SegurApp</string>
    <string name="login_user">Correo</string>
    <string name="login_user_hint">Ingrese su correo</string>
    <string name="login_password">Contraseña</string>
    <string name="login_password_hint">Ingrese su contraseña</string>
    <string name="login_btn_primary">Ingresar</string>
    <string name="login_btn_secundary">Crear cuenta</string>
    <string name="login_forgot_pass">¿Olvidaste la contraseña?</string>

    <string name="register_user">Usuario</string>
    <string name="register_user_hint">Ingrese su correo</string>
    <string name="register_password">Correo</string>
    <string name="register_password_hint">Ingrese su contraseña</string>
    <string name="register_btn_primary">Registrarse</string>

    <string name="home_btn_help">¡AYUDA!</string>
</resources>