<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/tvLoginEmail"
        style="@style/loginEdiText"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/login_user_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMail" />

    <EditText
        android:id="@+id/tvLoginPassword"
        style="@style/loginEdiText"
        android:ems="8"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginEmail"
        app:layout_constraintVertical_bias="0.175" />

    <TextView
        android:id="@+id/tvMail"
        style="@style/loginTextView"
        android:text="@string/login_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275" />

    <TextView
        android:id="@+id/tvPassword"
        style="@style/loginTextView"
        android:layout_marginTop="24dp"
        android:text="@string/login_password"
        app:layout_constraintBottom_toTopOf="@+id/tvLoginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginEmail"
        app:layout_constraintVertical_bias="0.032" />

    <Button
        android:id="@+id/btSubmit"
        style="@style/buttomPrimary"
        android:text="@string/login_btn_primary"
        app:layout_constraintBottom_toTopOf="@+id/btCreate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLoginPassword"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btCreate"
        style="@style/buttomSecundary"
        android:layout_marginBottom="152dp"
        android:text="@string/login_btn_secundary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        style="@style/login_img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032"
        app:srcCompat="@drawable/segurapp"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/login_decoration" />

</androidx.constraintlayout.widget.ConstraintLayout>